--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   ],
   "devDependencies": {
     "babel-core": "^6.2.1",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
