--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "babel-core": "^6.2.1",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.0",
+    "babel-plugin-tcomb": "^0.3.18",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-1": "^6.5.0",
@@ -56,6 +58,7 @@
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "tcomb": "^3.2.15",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
