--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "babel-loader": "^6.2.0",
     "babel-plugin-tcomb": "^0.3.18",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-1": "^6.5.0",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
