--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-redux-firebase-boilerplate",
+  "name": "react-mobx-firebase-starter",
   "version": "1.0.0",
-  "description": "Simple boilerplate for Reactjs with Redux and Firebase",
+  "description": "Simple boilerplate for Reactjs with Mobx and Firebase",
   "main": "index.js",
-  "repository": "git@github.com:btomashvili/react-redux-firebase-boilerplate.git",
+  "repository": "git@github.com:jefffriesen/react-mobx-firebase-starter.git",
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server --config ./webpack/webpack-dev.config.js --watch --colors",
     "build": "rm -rf dist && ./node_modules/.bin/webpack --config ./webpack/webpack-prod.config.js --colors",
@@ -12,18 +12,11 @@
     "test:watch": "npm run test -- --watch",
     "lint": "./node_modules/.bin/eslint src"
   },
-  "author": "Beka Tomashvili",
-  "contributors": [
-    {
-      "name": "Alexander Wong",
-      "email": "admin@alexander-wong.com",
-      "url": "https://www.alexander-wong.com/"
-    }
-  ],
+  "author": "Beka Tomashvili, Jeff Friesen",
   "license": "MIT",
   "keywords": [
     "ReactJS",
-    "Redux",
+    "Mobx",
     "Firebase",
     "React hot loader",
     "React Router",
@@ -42,7 +35,7 @@
     "babel-preset-stage-1": "^6.5.0",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.25.0",
     "eslint": "^3.6.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
@@ -53,11 +46,11 @@
     "html-webpack-plugin": "^2.21.0",
     "imports-loader": "^0.6.5",
     "jquery": "^3.1.0",
-    "jsdom": "^8.1.0",
-    "mocha": "^2.4.5",
+    "jsdom": "^9.6.0",
+    "mocha": "^3.1.0",
     "node-sass": "^3.8.0",
-    "react-addons-test-utils": "^0.14.8",
-    "react-hot-loader": "^1.3.0",
+    "react-addons-test-utils": "^15.3.2",
+    "react-hot-loader": "^3.0.0-beta.5",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "tcomb": "^3.2.15",
@@ -66,15 +59,17 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "bootstrap-social": "^5.0.0",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^2.0.0",
     "express": "^4.14.0",
     "firebase": "^3.0.5",
     "font-awesome": "^4.6.3",
-    "lodash": "^3.10.1",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.3",
+    "lodash": "^4.16.4",
+    "react": "^15.3.2",
+    "react-bootstrap": "^0.30.5",
+    "react-dom": "^15.3.2",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0-rc5",
     "redux": "^3.0.4",
