--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "PORT=8080 pm2 start ./www.js",
     "test": "./node_modules/.bin/eslint src && ./node_modules/.bin/mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch",
-    "lint": "./node_modules/.bin/eslint src"
+    "lint": "./node_modules/.bin/eslint src",
+    "jest": "jest --watch"
   },
   "author": "Beka Tomashvili, Jeff Friesen",
   "license": "MIT",
@@ -44,6 +45,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.21.0",
     "imports-loader": "^0.6.5",
+    "jest": "^16.0.1",
     "jsdom": "^9.6.0",
     "mocha": "^3.1.0",
     "node-sass": "^3.8.0",
